--- a/style.css
+++ b/style.css
@@ -60,19 +60,6 @@ body {
     width: 100%;
   }
 
-  .input[type=radio] {
-    background-color: #303245;
-    border-radius: 12px;
-    border: 0px;
-    box-sizing: border-box;
-    color: #eee;
-    font-size: 16px;
-    height: 2em;
-    outline: 0;
-    padding: 4px 18px 0;
-    width: 100%;
-  }
-
   .cut {
     background-color: #15172b;
     border-radius: 8px;
@@ -82,7 +69,7 @@ body {
     top: -16px;
     transform: translateY(0);
     transition: transform 200ms;
-    width: 60px;
+    width: 160px;
   }
   
   .cut-short {
@@ -129,7 +116,6 @@ body {
     font-size: 16px;
     height: 30px;
     margin-top: 30px;
-    // outline: 0;
     text-align: center;
     width: 100%;
   }
@@ -137,3 +123,11 @@ body {
   .submit:active {
     background-color: #06b;
   }
+
+  .submit:disabled,
+  .submit[disabled]{
+    border: 1px solid #999999;
+    background-color: #cccccc;
+    color: #666666;
+    cursor: not-allowed;
+}
