--- a/views/stop.html
+++ b/views/stop.html
@@ -10,5 +10,5 @@
 </head>
 
 <body>
-    <div class="title">Serviço encerrado, obrigado!!!</div>
+    <div class="title">Serviço será encerrado em 5 sec...</div>
 </html>
